--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "black>=25.1.0",
     "imbalanced-learn==0.11.0",
     "lightning[extra]>=2.5.1.post0",
+    "mediapipe>=0.10.21",
+    "opencv-python>=4.11.0.86",
     "pandas>=2.3.0",
     "pyqt6>=6.9.1",
     "scikit-learn==1.3.2",
